# epictagmanager

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: file_handler.cpp  file_handler.h  tag_manager.cpp  tag_manager.h
